--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
 		<version>2.3.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<groupId>wolff</groupId>
+	<artifactId>spring-boot-api</artifactId>
+	<version>1.0.0</version>
+	<name>spring-boot-api</name>
+	<description>Spring Boot API</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>13</java.version>
 	</properties>
 
 	<dependencies>
